--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>This a new HTML file</h1>
+    <h2>This is H2 Heading!!!</h2>
     <p>Welcome to my website!!!</p>
     
 </body>
