Added style on h1

--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>This a new HTML file</h1>
+    <h1 style = "color:blue;">This a new HTML file</h1>
     <h2>This is H2 Heading!!!</h2>
     <p>Welcome to my website!!!</p>
     
