--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1 style = "color:blue;">This a new HTML file and I am learning GIT</h1>
+    <h1 style = "color:blue;">This a new HTML file and I am learning GIT!</h1>
     <h2>This is H2 Heading!!!</h2>
     <p>Welcome to my website!!!</p>
     
